# docs/swagger.json
@@ -256,7 +256,7 @@
         "/image": {
             "post": {
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -272,13 +272,22 @@
                         "required": true
                     },
                     {
-                        "description": "Image Info",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/resources.UploadImageRequest"
-                        }
+                        "type": "file",
+                        "description": "Image",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "face",
+                            "id_card"
+                        ],
+                        "type": "string",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -531,21 +540,6 @@
                         "basic",
                         "advanced",
                         "enterprise"
-                    ]
-                }
-            }
-        },
-        "resources.UploadImageRequest": {
-            "type": "object",
-            "required": [
-                "imageType"
-            ],
-            "properties": {
-                "imageType": {
-                    "type": "string",
-                    "enum": [
-                        "face",
-                        "id_card"
                     ]
                 }
             }
